--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,7 @@
     width: 200px;
     height: 50px;
     border-radius: 4px; 
+    cursor: pointer;
   }
    
    .button { 
@@ -160,6 +161,7 @@
     line-height: 1.143px;
     letter-spacing: 0.02em;
     color: var(--title-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
   .header-mail-link,
@@ -169,25 +171,26 @@
     line-height: 1.143px;
     letter-spacing: 0.02em;
     color: var(--subtitle-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
   .navigation-list-link:hover,
   .navigation-list-link:focus {
     color: var(--accent-color);
+   
   }
   
   .navigation-portfolio-list-link {
     color: var(--accent-color);
+    
   }
   
   .header-mail-link:hover,
-  .header-mail-link:focus {
-    color: var(--accent-color);
-  }
-
+  .header-mail-link:focus,
   .header-tel-link:hover,
   .header-tel-link:focus {
     color: var(--accent-color);
+    
   }
   
   .header-portfolio-mail-link,
@@ -338,6 +341,7 @@
     padding-left: 32px;
     padding-right: 32px;
     padding-bottom: 30px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .command-title {
     margin-bottom: 18px;
@@ -389,6 +393,8 @@
     height: 44px;
     border-radius: 50px;
     fill: #AFB1B8;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
   }
   .social-list-link:hover {
     background-color: var(--accent-color);
@@ -408,6 +414,7 @@
 
   .social-list-svg {
     height: 20px;  
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);;
   }
     
   /*======== END COMAND  ======*/
@@ -602,7 +609,7 @@
     height: 294px;
    }
 
-   /*======   ПОСТОЯНЫЕ КЛИЕНТЫ   ====*/
+   /*======   CLIENTS   ====*/
 
   .clients-title {
     font-weight: 700;
@@ -645,3 +652,41 @@
   fill: var(--accent-color);
 }
 
+/*========== END CLIENTS========*/
+
+/*====== MODAL WINDOW ========*/
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 1600px;
+  height: 1024px;
+  background: rgba(0, 0, 0, 0.2);;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 528px;
+  height: 581px;
+  background: #ffffff;
+}
+
+.close-btn {
+  position: absolute;
+  top: 8;
+  right: 8;
+  width: 30px;
+  height: 30px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+.modal-svg {
+  height: 18px;
+  fill: #000000;
+}
+
+/*======== END MODAL WINDOW ======*/
