--- a/css/styles.css
+++ b/css/styles.css
@@ -313,7 +313,28 @@
     letter-spacing: 0.03em;
     color: var(--title-color);
   }
-      
+  .overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: rgba(47, 48, 58, 0.8);
+    width: 370px;
+    height: 70px;
+  }  
+  .label {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    padding-top: 27px;
+  }
+   
+  .heading {
+    position: relative;
+  }
   /*======== END ABOUT US  ======*/
     
   /*======== COMMAND  ======*/
@@ -414,7 +435,7 @@
 
   .social-list-svg {
     height: 20px;  
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
     
   /*======== END COMAND  ======*/
@@ -512,6 +533,7 @@
     margin-left: 70px;
     padding-top: 72px;
     padding-bottom: 100px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
     /*======  END FOOTER  ========*/
@@ -521,12 +543,13 @@
   .filter {
     padding-top: 94px;
     padding-left: 275px;
+    
   }
   
   .modal-btn {
     /* shadow-middle */
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .modal-btn:hover,
@@ -542,6 +565,7 @@
  }
   .croup {
     display: inline-block;
+    position: relative;
     width: 370px;
     height: 404px;
     background: #FFFFFF;
@@ -563,9 +587,9 @@
     margin-bottom: 30px;
     }
   .project {
-      display: flex;
-      flex-wrap: wrap;
-    }
+    display: flex;
+    flex-wrap: wrap;
+  }
   .project:hover,
   .project:focus {
     color: #EEEEEE;;
@@ -608,8 +632,43 @@
     width: 370px;
     height: 294px;
    }
+   
+  .description-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    width: 100%;
+    height: 294px;
+    background: rgba(33, 150, 243, 0.9);
+    transform: translateY(110%);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
+  }
 
-   /*======   CLIENTS   ====*/
+  .subtitle-overlay {
+    padding-top: 63px;
+    padding-left: 24px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    /* or 156% */
+    
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+  }
+
+  .project-overlay:hover .description-overlay {
+    transform: translateY(0px);
+  }
+  .croup-overlay {
+    position: relative;
+    overflow: hidden;
+  }
+  /*====== END GALLERY =======*/
+
+
+  /*======   CLIENTS   ====*/
 
   .clients-title {
     font-weight: 700;
@@ -631,6 +690,7 @@
     height: 90px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
   }
 
@@ -659,11 +719,17 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 1600px;
-  height: 1024px;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, 0.2);;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
 .modal {
   position: absolute;
   top: 50%;
@@ -676,18 +742,22 @@
 
 .close-btn {
   position: absolute;
-  top: 8;
-  right: 8;
+  top: 8px;
+  right: 8px;
   width: 30px;
   height: 30px;
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
   cursor: pointer;
+ 
 }
 .modal-svg {
+  padding-top: 6px;
+ 
   width: 18px;
   height: 18px;
-  background: #000000;
+ 
 }
 
 /*======== END MODAL WINDOW ======*/
